# ttml-meta-db

./: .gitignore  CMakeLists.txt  README.md  album.cpp  album.h  albumartistmodel.cpp  albumartistmodel.h  albummodel.cpp  albummodel.h  artist.cpp  artist.h  artistmembermodel.cpp  artistmembermodel.h  artistmodel.cpp  artistmodel.h  database.cpp  database.h  dataentity.cpp  dataentity.h  extramodel.h  iddelegate.cpp  iddelegate.h  iddialog.cpp  iddialog.h  iddialog.ui  idmodel.cpp  idmodel.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  metadialog.cpp  metadialog.h  metadialog.ui  metamodel.cpp  metamodel.h  res.qrc  track.cpp  track.h  trackalbummodel.cpp  (+8 more)
.github/workflows/: build-release.yml
database/: database.h
database/types/: album.cpp  album.h  artist.cpp  artist.h  dataentity.cpp  dataentity.h  track.cpp  track.h
models/: albumartistmodel.cpp  albumartistmodel.h  albummodel.cpp  albummodel.h  artistmembermodel.cpp  artistmodel.cpp  extramodel.cpp  idmodel.h  metamodel.h  trackalbummodel.cpp  trackfeatmodel.cpp  trackfeatmodel.h  trackmodel.cpp  trackmodel.h
wintoast/: wintoast.hpp  wintoastlib.cpp  wintoastlib.h
